# trie

./: dune-project  trie.opam
lib/: trie.ml
test/: dune  test_trie.ml
